--- a/style/style.css
+++ b/style/style.css
@@ -677,9 +677,9 @@ background: linear-gradient(90deg,rgba(240, 196, 1, 1) 80%, rgba(255, 234, 0, 0)
   background-color: rgb(92, 26, 126);
   background-image: url(../assets/background001.webp);
   background-size: auto;
-  z-index: 9999;
+   z-index: 9999999;
   display: none; 
-    transition: opacity 0.4s ease, visibility 0.4s ease;
+  
 }
 #pantallaNegra.activo {
   display: flex; 
@@ -888,25 +888,14 @@ background-color:rgba(0, 0, 0, 0.545);
 
   .Cnormal{
 background: radial-gradient(circle,rgba(255, 255, 255, 0) 60%, rgba(20, 176, 122, 0.465) 100%);
-    animation: entradacolores 1s ease-in-out;
 
   }
     .Craro{
     background: radial-gradient(circle,rgba(255, 255, 255, 0) 60%, rgba(238, 0, 255, 0.473) 100%);
-    animation: entradacolores 1s ease-in-out;
   }
       .Clegendario{
     background: radial-gradient(circle,rgba(255, 255, 255, 0) 60%, rgba(255, 217, 0, 0.516) 100%);
-        animation: entradacolores 1s ease-in-out;
 
-  }
-  @keyframes entradacolores{
-    0%{
-      filter: opacity(0) ;
-    }
-    100%{
-      filter: opacity(1) ;
-    }
   }
 
 .carta{
@@ -938,7 +927,9 @@ overflow: visible;
   100% { transform: rotateY(360deg);  }
 }
 
-
+.animacion-primera-vez {
+  animation: giro2 0.8s ease forwards;
+}
 
 
 .tarjeta.flip > .frente{
