--- a/style/style.css
+++ b/style/style.css
@@ -681,6 +681,7 @@ background: linear-gradient(90deg,rgba(240, 196, 1, 1) 80%, rgba(255, 234, 0, 0)
   display: none; 
   
 }
+
 #pantallaNegra.activo {
   display: flex; 
   justify-content: center;
@@ -927,11 +928,19 @@ overflow: visible;
   100% { transform: rotateY(360deg);  }
 }
 
+
 .animacion-primera-vez {
-  animation: giro2 0.8s ease forwards;
+  animation: fadeIn 0.8s ease-in-out, zoom 0.5s ease-in-out;
 }
 
-
+@keyframes zoom{
+  0%{
+    transform: scale(2);
+  }
+    100%{
+    transform: scale(1);
+  }
+}
 .tarjeta.flip > .frente{
 pointer-events: all;
 }
