--- a/style/style.css
+++ b/style/style.css
@@ -84,7 +84,6 @@ html, body{
 .efectoholograficolineas,
 .capaholograficaestrellas,
 .bordecarta,
-.trasera,
 .michi{
   pointer-events: none;
   outline: none;
@@ -814,7 +813,7 @@ filter: opacity(0);
     z-index: 999999;
     transform-style: preserve-3d;
     overscroll-behavior: none;
-
+        animation: fadeIn 1s ease-in-out;
   }
 
 
@@ -920,24 +919,29 @@ overflow: visible;
 }
 
 .tarjeta.flip {
-  animation: giro2 1s ease-in-out;
+  animation: fadeIn 0.3s ease-in-out, zoom 0.3s ease-in-out;
   width: 309px;
   height: 450px;
 }
 
-@keyframes giro2 {
-  0% {  transform: rotateY(0deg) scale(0) rotate(-20deg) ;  }
-  100% { transform: rotateY(720deg);  }
-}
-
-
-.animacion-primera-vez {
-  animation: fadeIn 0.8s ease-in-out, zoom 0.5s ease-in-out;
-}
-
 @keyframes zoom{
   0%{
-    transform: scale(2);
+    transform: scale(0.9);
+  }
+    100%{
+    transform: scale(1);
+  }
+}
+
+.animacion-primera-vez {
+  animation: fadeIn 1s ease-in-out, zoomprimeravez 1s ease-in-out;
+}
+
+@keyframes zoomprimeravez {
+  0%{
+    transform: scale(1.5);
+    filter: brightness(20) grayscale(1) blur(20px);
+
   }
     100%{
     transform: scale(1);
@@ -959,14 +963,7 @@ overflow: hidden;
 .frente{
   pointer-events: none;
 }
-.trasera{
-  background-image: url(../assets/cartas/BACK.webp);
-  background-size: cover;
-  transform: rotateY(180deg);
-  background-size: cover;
-    z-index: 9999999999;
-    backface-visibility: hidden;
-}
+
 
 .lineascolores{
   width: 100%;
