--- a/style/style.css
+++ b/style/style.css
@@ -656,7 +656,7 @@ background: linear-gradient(90deg,rgba(240, 196, 1, 1) 80%, rgba(255, 234, 0, 0)
   font-family: Arial, Helvetica, sans-serif !important;
   font-weight: bold !important;
   font-size: 70%;
-  padding-left: 5px;
+  padding: 0px 10px;
   align-items: center;
 }
 
@@ -671,8 +671,8 @@ background: linear-gradient(90deg,rgba(240, 196, 1, 1) 80%, rgba(255, 234, 0, 0)
 }
 
 .alerta-desbloqueo .circulo-imagen img {
-  width: 80px;
-  height: 80px;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   display: block;
 }
