--- a/style/style.css
+++ b/style/style.css
@@ -828,8 +828,38 @@ filter: opacity(0);
     z-index: 999999;
     transform-style: preserve-3d;
     overscroll-behavior: none;
+    
   }
 
+  .textorareza{
+    text-align: center;
+    width: 100%;
+    position: absolute;
+    top: 5%;
+    font-size: 120%;
+    color: rgba(255, 255, 255, 0.536);
+  }
+.PLEGENDARIO,
+  .PNORMAL,
+  .PRARO{
+    transform: translateY(25px) rotate(-3deg);
+        font-family: "Covered By Your Grace", cursive !important;
+     letter-spacing: 2px;
+  font-style: normal;
+        font-size: 250%;
+  }
+
+  .PNORMAL{
+color: rgb(191, 191, 191);
+  }
+    .PRARO{
+color: rgb(236, 130, 255);
+text-shadow: 0px 0px 7px rgb(255, 0, 234);
+  }
+    .PLEGENDARIO{
+color: rgb(255, 250, 235);
+text-shadow: 0px 0px 7px rgb(255, 202, 57);
+  }
 
 /* --------------------------QR DE CARTA------------------------- */
 .codigoqrdecarta {
@@ -1095,9 +1125,9 @@ display: none;
 
 .expansion{
   pointer-events: none;
-transform: translateY(50px);
+transform: translateY(70px);
   width: 100%;
-  height: 150px;
+  height: 400px;
   position: relative;
   background-size: contain;
   background-position: center;
@@ -1257,6 +1287,18 @@ display: none;
   background-position: center;
   background-repeat: no-repeat;
   animation: zoom 0.2s ease-in-out;
+  justify-content: center;
+  align-items: last baseline;
+  display: flex;
+}
+.carruseldeexpansiones-item  p{
+  font-size: 100%;
+  font-size: 150%;
+  color: rgba(255, 255, 255, 0.496);
+  text-align: center;
+    font-family: "Covered By Your Grace", cursive !important;
+     letter-spacing: 3px;
+  font-style: normal;
 }
 
 .carruseldeexpansiones-btn {
