--- a/style/style.css
+++ b/style/style.css
@@ -1296,9 +1296,12 @@ animation: sobreflotar 1.5s ease-in-out alternate infinite;
 @keyframes sobreflotar {
   0%{
     transform: translateY(-15px);
+    filter: brightness(1.2) contrast(1.1);
   }
   100%{
     transform: translateY(10px);
+        filter: brightness(1) contrast(1);
+
   }
 }
 
