--- a/style/style.css
+++ b/style/style.css
@@ -1291,16 +1291,27 @@ display: none;
   justify-content: center;
   align-items: last baseline;
   display: flex;
-animation: sobreflotar 1.5s ease-in-out alternate infinite;
+animation: sobreflotar 1.5s ease-in-out alternate infinite, brillosobres 2.5s ease-in-out alternate infinite;
 }
 @keyframes sobreflotar {
   0%{
     transform: translateY(-15px);
-    filter: brightness(1.2) contrast(1.1);
   }
   100%{
     transform: translateY(10px);
-        filter: brightness(1) contrast(1);
+
+  }
+}
+@keyframes brillosobres{
+  0%{
+            filter: brightness(1)saturate(1) contrast(1);
+
+  }
+    55%{
+            filter: brightness(1) saturate(1) contrast(1);
+  }
+    100%{
+            filter: brightness(1.1) saturate(1.3) contrast(1.5);
 
   }
 }
