--- a/style/style.css
+++ b/style/style.css
@@ -874,6 +874,51 @@ color: rgb(255, 250, 235);
 text-shadow: 0px 0px 7px rgb(255, 202, 57);
   }
 
+
+.animacionfondo{
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  pointer-events: none;
+  z-index: 9;
+}
+
+.animacoionoro{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-size: cover;
+  background-position: center;
+animation: animacionoro 8s infinite ;
+}
+@keyframes animacionoro  {
+
+    0%{
+  background-image: none;
+  }
+      30%{
+  background-image: none;
+  }
+    31%{
+  background-image: url(../assets/cartas/ORO_03.webp);
+  }
+      33%{
+  background-image: url(../assets/cartas/ORO_02.webp);
+  }
+    35%{
+  background-image: url(../assets/cartas/ORO_01.webp);
+  }
+    36%{
+  background-image: url(../assets/cartas/ORO_01.webp);
+  }
+      37%{
+  background-image: none;
+  }
+
+}
+
 /* --------------------------QR DE CARTA------------------------- */
 .codigoqrdecarta {
   display: none;
