--- a/style/style.css
+++ b/style/style.css
@@ -665,6 +665,50 @@ background: linear-gradient(90deg,rgba(240, 196, 1, 1) 80%, rgba(255, 234, 0, 0)
   opacity: 1;
 }
 
+.fondoexplosion {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+background: linear-gradient(19deg,rgba(0, 0, 0, 0) 0%, rgba(137, 91, 0, 0) 54%, rgba(255, 170, 0, 0.56) 100%);
+  opacity: 0;
+  z-index:  99999998; /* debajo de la alerta */
+    pointer-events: none;
+      transition: opacity 0.5s ease;
+        overflow: hidden;
+
+}
+
+.fondoexplosion.visible {
+  opacity: 1; /* o el valor que quieras */
+}
+.estrella {
+    border-radius: 50%;
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  background: rgb(255, 255, 187);
+  border-radius: 50%;
+  opacity: 0;
+  box-shadow: 0px 0px 36px 9px rgba(255,236,0,1);
+    animation: explosion 2s forwards;
+
+
+}
+
+@keyframes explosion {
+  0% {
+    transform: translate(0, 0) scale(1);
+    opacity: 1;
+  }
+
+  100% {
+    transform: translate(var(--dx), var(--dy)) scale(0);
+    opacity: 0;
+  }
+}
+
 .alerta-desbloqueo .mensaje {
   color: black !important;
   font-family: Arial, Helvetica, sans-serif !important;
