--- a/style/style.css
+++ b/style/style.css
@@ -773,7 +773,42 @@ animation: flashAnim 1.3s ease-out forwards;
   }
 }
 
+/* ------------------------------------pantalla de cargando la primera vez que abre legendaria-------------------------------------- */
 
+/* Overlay de carta legendaria */
+.overlay-revelado {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgb(255, 255, 255);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+  border-radius: 10px;
+  pointer-events: all; /* bloquea clicks debajo */
+  box-shadow: 0px 0px 31px 20px rgba(255,255,255,1);
+
+}
+
+
+
+.overlay-revelado.fade-out {
+  animation: desaparecerOverlay 0.5s ease forwards;
+}
+
+@keyframes desaparecerOverlay {
+  0% {
+    scale: 1;
+    opacity: 1;
+  }
+  100% {
+    scale: 3;
+    opacity: 0;
+  }
+}
 
 /* -------------------------------------------------------------------------- */
 
