--- a/style/style.css
+++ b/style/style.css
@@ -509,54 +509,53 @@ border-radius: 3px;
 border-radius: 3px;
 background-size: contain;
 background-color: rgba(92,26,126,1);
-border: 3px dashed #7b27a4;
-
-    box-shadow: 0 0 0 10px rgba(92,26,126,1);
+border: 3px dashed #7a27a4d6;
   user-select: none;       /* no seleccionable */
   -webkit-tap-highlight-color: transparent; /* quita el flash en móviles */
   }
-.overlay-bloqueo:active,
-.overlay-bloqueo:focus {
-  box-shadow: 0 0 0 10px rgba(92,26,126,1) !important;
-  outline: none !important;
-}
+
 .oro{
 animation: orobrillo 4s linear infinite;
 }
 
 @keyframes orobrillo {
   0%, 100% {
-    box-shadow:
-      0 0 4px rgba(255, 212, 69, 0),
-      0 0 8px rgba(255, 212, 69, 0);
-      filter: brightness(1);
+      filter: brightness(1) contrast(1) sepia(0) saturate(1);
   }
   50% {
-    box-shadow:
-      0 0 4px rgb(243, 255, 69),
-      0 0 8px rgba(255, 212, 69, 0.801),
-      0 0 10px rgba(255, 212, 69, 0.543);
-            filter: brightness(1.4);
+      filter: brightness(1.3) contrast(1.3) sepia(1) saturate(5);
   }
 }
 
 
 /* Haz de luz */
+
 .oro::before,.plata::before {
   content: "";
   top: -150%;
   left: -150%;
   width: 200%;
   height: 200%;
+  transform: rotate(25deg);
+  animation: shine 4s ease-in-out infinite;
+}
+.plata::before {
   background: linear-gradient(
     110deg,
     rgba(255, 255, 255, 0) 43%,
     rgba(255, 255, 255, 0.623) 50%,
     rgba(255, 255, 255, 0) 57%
   );
-  transform: rotate(25deg);
-  animation: shine 4s ease-in-out infinite;
 }
+.oro::before {
+  background: linear-gradient(
+    110deg,
+    rgba(255, 255, 255, 0) 43%,
+    rgb(255, 233, 172) 50%,
+    rgba(255, 255, 255, 0) 57%
+  );
+}
+
 
 @keyframes shine {
   0% {
@@ -774,7 +773,6 @@ animation: flashAnim 1.3s ease-out forwards;
 }
 
 /* ------------------------------------pantalla de cargando la primera vez que abre legendaria-------------------------------------- */
-
 /* Overlay de carta legendaria */
 .overlay-revelado {
   position: absolute;
@@ -790,15 +788,14 @@ animation: flashAnim 1.3s ease-out forwards;
   border-radius: 10px;
   pointer-events: all; /* bloquea clicks debajo */
   box-shadow: 0px 0px 31px 20px rgba(255,255,255,1);
-
 }
 
-
-
+/* Animación al desaparecer */
 .overlay-revelado.fade-out {
   animation: desaparecerOverlay 0.5s ease forwards;
 }
 
+/* Efecto de desaparición */
 @keyframes desaparecerOverlay {
   0% {
     scale: 1;
@@ -809,6 +806,8 @@ animation: flashAnim 1.3s ease-out forwards;
     opacity: 0;
   }
 }
+
+
 
 /* -------------------------------------------------------------------------- */
 
