--- a/style/style.css
+++ b/style/style.css
@@ -42,7 +42,8 @@ html, body{
 
 #galeriaContainer,
 #queesContainer,
-#noticiasContainer{
+#noticiasContainer,
+#regalosContainer{
   display: none; 
   position: fixed;
   top: 0;
@@ -70,6 +71,7 @@ html, body{
 .overlaY,
 #galeriaContainer,
 #queesContainer,
+#regalosContainer,
 #noticiasContainer,
 .lineascolores{
   width: 100%;
@@ -311,7 +313,7 @@ html, body{
   justify-content: center;
   align-items: center;
   display: flex;
-     animation: fadeIn 1s ease-in-out 7.9s forwards;
+     animation: fadeIn 1s ease-in-out 4.9s forwards;
 }
 .botonesmenu{
     justify-content: center;
@@ -1341,12 +1343,7 @@ display: none;
 
 
 
-  /*--------------------------------------------------------QUE ES MICHI BOX--------------------------------------------------------------------*/
-
-
-
-
-
+  /*--------------------------------------------------------TIENDA--------------------------------------------------------------------*/
 
 
 
@@ -1394,8 +1391,83 @@ height: 90vh;
   text-align: center;
 }
 
+  /*-----------------------------regalos------------------------------*/
 
 
+
+.opcionesdecompra{
+  justify-content: center;
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-wrap: wrap;
+gap: 20px;
+}
+.compra{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 150px;
+  margin: 20px 0px;
+}
+.imagenproducto{
+  width: 150px;
+  height: 150px;
+
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.productodescripcion{
+  width: 100%;
+    text-align: center;
+  font-size: 70%;
+}
+
+/* 🌟 Estilo del botón original */
+.botonCopiar {
+      width: 120px;
+  height: 50px;
+  background: linear-gradient(0deg, rgba(17, 148, 7, 1) 26%, rgba(17, 209, 0, 1) 46%);
+  color: white;
+border: 3px solid rgb(45, 180, 0);
+  border-radius: 7px;
+}
+
+
+
+/* 🩶 Estilo del botón cuando ya fue canjeado */
+.botonCanjeado {
+      width: 120px;
+  height: 50px;
+  background: linear-gradient(0deg, rgb(92, 92, 92) 26%, rgb(155, 155, 155) 46%);
+  color: rgb(0, 0, 0);
+border: 3px solid rgb(119, 119, 119);
+  border-radius: 7px;
+    font-weight: bold;
+}
+
+
+
+/* ✅ Cartel de confirmación de canje */
+.mensajeCanjeado {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+background-image: url(../assets/TICKET\ 00\ blanco.webp);
+background-size: contain;
+background-position: center;
+background-repeat: no-repeat;
+  z-index: 9999999;
+  animation:fadeIn 1.5s ease-in-out, zoomprimeravez 1.5s ease-in-out;
+
+
+}
+
+/* ✨ Animación para que aparezca y desaparezca suavemente */
 
 
   /*-----------------------------BOTONES DE INTERRACCION------------------------------*/
@@ -1612,7 +1684,7 @@ top: 90%;
 
 .logo{
   height: 40%;
-  animation: carruselmenuMEDIA 20s ease-in-out infinite, slideDown 0.5s ease-out 7.9s, fadeIn 0.5s ease-in-out 7.9s;
+  animation: carruselmenuMEDIA 20s ease-in-out infinite, slideDown 0.5s ease-out 4.9s, fadeIn 0.5s ease-in-out 4.9s;
 }
 .IMAGENLOGOBANNER{
   display: block;
