--- a/style/style.css
+++ b/style/style.css
@@ -396,19 +396,15 @@ pointer-events: none;
 /*--------------------------------BOTON DESBLOQUEAR CARTA-----------------------------------*/
 
 .BOTONDESBLOQUEAR{
+  filter: opacity(0);
   overscroll-behavior: none;
-background-color: rgba(255, 255, 255, 0.107);
-backdrop-filter: blur(5px);
-border: 3px solid rgba(255, 255, 255, 0.083);
-border-radius: 10px;
+border: none;
   font-family:Helvetica;
-padding: 10px;
-margin: 0 auto;
-  z-index: 500;
-  top: 20px;
-position: sticky;
-  width: 300px;
+position: absolute;
+  width: 0px;
+  pointer-events: none;
 }
+/*--
 #codigoGlobal {
   border: none;
   color: rgb(255, 255, 255); 
@@ -430,7 +426,7 @@ font-size: 150%;
 border: none;
 background-color: rgba(255, 255, 255, 0);
 transition: 0.3s ease;
-}
+}--*/
 
 
 
@@ -473,6 +469,7 @@ transition: 0.3s ease;
     height: auto;
     flex-wrap: wrap;
   animation: slideDown 1s ease-out, fadeIn 1s ease-in-out;
+  
   }
 
 .contenedorcolores{
@@ -1353,7 +1350,6 @@ display: none;
 .contenedorQUEESyNOTICIAS{
    overflow-y: auto;
   overflow-x: hidden;
-  padding-top: 100px;
 width: 100%;
 height: 90vh;
  
