--- a/style/style.css
+++ b/style/style.css
@@ -408,9 +408,9 @@ pointer-events: none;
 /*--------------------------------BOTON DESBLOQUEAR CARTA-----------------------------------*/
 
 .BOTONDESBLOQUEAR{
-  filter: opacity(0);
+
   overscroll-behavior: none;
-pointer-events: none;
+
   font-family:Helvetica;
 position: absolute;
   width: 100%;
@@ -418,6 +418,9 @@ position: absolute;
   background-color: rgba(255, 0, 0, 0);
   z-index: 99999999999999;
   display: none;
+  pointer-events: none;
+    filter: opacity(0);
+    
 }
 
 #codigoGlobal {
@@ -1579,7 +1582,7 @@ border: 3px solid rgb(86, 214, 27);
 .botonCopiar {
     font-size: 70%;
     font-weight: bold;
-      width: 120px;
+      width: 100%;
   height: 50px;
   background: linear-gradient(0deg, rgb(7, 110, 0) 26%, rgb(14, 167, 0) 46%);
   color: white;
@@ -1590,7 +1593,7 @@ border: 3px solid rgb(86, 214, 27);
 
 .botonCopiarSINSTOCK {
   font-weight: bold;
-      width: 120px;
+      width: 100%;
   height: 50px;
   background: linear-gradient(0deg, rgb(148, 7, 7) 26%, rgb(209, 0, 0) 46%);
   color: white;
@@ -1602,7 +1605,7 @@ border: 3px solid rgb(255, 107, 58);
 
 /* 🩶 Estilo del botón cuando ya fue canjeado */
 .botonCanjeado {
-      width: 120px;
+      width: 100%;
   height: 50px;
   background: linear-gradient(0deg, rgb(92, 92, 92) 26%, rgb(155, 155, 155) 46%);
   color: rgb(0, 0, 0);
@@ -1739,6 +1742,10 @@ animation: sobreflotar 1.2s ease-in-out alternate infinite, brillosobres 1.8s ea
 
   }
 }
+.ticketssobrefestivo{
+  animation: sobreflotar 10s ease-in-out alternate-reverse infinite;
+
+}
 
 @keyframes desplazamientolateral {
   0%{
@@ -1803,7 +1810,7 @@ animation: sobreflotar 1.2s ease-in-out alternate infinite, brillosobres 1.8s ea
 
 
 
-@media only screen and (max-width: 500px){
+@media only screen and (max-width: 600px){
 
   .iconomenu:nth-child(1){
 display: block;
@@ -1867,25 +1874,25 @@ top: 90%;
 @keyframes carruselmenuMEDIA {
 
     0%{
-  background-image: url(../assets/background_BANNER_004_MEDIA_004.webp);
+  background-image: url(../assets/background_BANNER_002_MEDIA_002.webp);
   }
       35%{
-  background-image: url(../assets/background_BANNER_004_MEDIA_004.webp);
+  background-image: url(../assets/background_BANNER_002_MEDIA_002.webp);
   }
     40%{
-  background-image: url(../assets/background_BANNER_005_MEDIA_005.webp);
+  background-image: url(../assets/background_BANNER_003_MEDIA_003.webp);
   }
       70%{
-  background-image: url(../assets/background_BANNER_005_MEDIA_005.webp);
+  background-image: url(../assets/background_BANNER_003_MEDIA_003.webp);
   }
     75%{
-  background-image: url(../assets/background_BANNER_006_MEDIA_006.webp);
+  background-image: url(../assets/background_BANNER_MEDIA.webp);
   }
       95%{
-  background-image: url(../assets/background_BANNER_006_MEDIA_006.webp);
+  background-image: url(../assets/background_BANNER_MEDIA.webp);
   }
       100%{
-  background-image: url(../assets/background_BANNER_004_MEDIA_004.webp);
+  background-image: url(../assets/background_BANNER_002_MEDIA_002.webp);
   }
 
 }
