--- a/style/style.css
+++ b/style/style.css
@@ -1129,7 +1129,8 @@ filter: opacity(0);
 .PLEGENDARIO,
   .PNORMAL,
   .PRARO,
-  .PCARTOON{
+  .PCARTOON,
+  .PFESTIVO{
     transform: translateY(40px) rotate(-3deg);
         font-family: "Covered By Your Grace", cursive !important;
      letter-spacing: 2px;
@@ -1151,6 +1152,10 @@ text-shadow: 0px 0px 7px rgb(255, 202, 57);
  .PCARTOON{
 color: rgb(144, 157, 255);
 text-shadow: 0px 0px 7px rgb(56, 109, 255);
+  }
+    .PFESTIVO{
+color: rgb(255, 255, 255);
+text-shadow: 0px 0px 7px rgb(255, 0, 153);
   }
 
 
@@ -1237,6 +1242,9 @@ background: radial-gradient(circle,rgba(255, 255, 255, 0) 60%, rgba(0, 145, 255,
       .Clegendario{
     background: radial-gradient(circle,rgba(255, 255, 255, 0) 60%, rgba(255, 217, 0, 0.516) 100%);
 
+  }
+      .Cfestivo{
+    background: radial-gradient(circle,rgba(255, 255, 255, 0) 60%, rgba(255, 0, 72, 0.473) 100%);
   }
 
 .carta{
