--- a/style/style.css
+++ b/style/style.css
@@ -1527,38 +1527,37 @@ height: 90vh;
 
 .opcionesdecompra{
   justify-content: center;
-  width: 100%;
-  height: auto;
-  display: flex;
-  flex-wrap: wrap;
-gap: 20px;
-}
-.compra{
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
+gap: 60px;
+margin: 0px 10px;
+padding: 10px;
+}
+.compra{
+border: 3px dashed #ffffff49;
+  background-color: rgba(255, 255, 255, 0.172);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 80px;
   align-items: center;
-  width: 150px;
-  margin: 20px 0px;
+  justify-content: space-between;
+  padding: 0px 10px;
 }
 
-.compra:nth-child(1), .compra:nth-child(2), .compra:nth-child(3) {
-display: none;
-}
 
 .imagenproducto{
-  width: 150px;
-  height: 150px;
-
+  transform: translateX(-20px);
+  width: 130px;
+  height: 130px;
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
 }
 
-.productodescripcion{
-  width: 100%;
-    text-align: center;
-  font-size: 60%;
-}
+
 
 .botondonarmenu{
 display: none;
@@ -1588,9 +1587,10 @@ border: 3px solid rgb(86, 214, 27);
 
 /* 🌟 Estilo del botón original */
 .botonCopiar {
-    font-size: 70%;
+
+    font-size: 60%;
     font-weight: bold;
-      width: 100%;
+      width: 150px;
   height: 50px;
   background: linear-gradient(0deg, rgb(7, 110, 0) 26%, rgb(14, 167, 0) 46%);
   color: white;
@@ -1601,25 +1601,25 @@ border: 3px solid rgb(86, 214, 27);
 
 .botonCopiarSINSTOCK {
   font-weight: bold;
-      width: 100%;
+      width: 150px;
   height: 50px;
   background: linear-gradient(0deg, rgb(148, 7, 7) 26%, rgb(209, 0, 0) 46%);
   color: white;
 border: 3px solid rgb(255, 107, 58);
   border-radius: 7px;
-    font-size: 70%;
+    font-size: 60%;
 }
 
 
 /* 🩶 Estilo del botón cuando ya fue canjeado */
 .botonCanjeado {
-      width: 100%;
+      width: 150px;
   height: 50px;
   background: linear-gradient(0deg, rgb(92, 92, 92) 26%, rgb(155, 155, 155) 46%);
   color: rgb(0, 0, 0);
 border: 3px solid rgb(119, 119, 119);
   border-radius: 7px;
-      font-size: 70%;
+      font-size: 60%;
 font-weight: bold;
 }
 
@@ -1633,7 +1633,7 @@ font-weight: bold;
   position: fixed;
   top: 0;
   left: 0;
-background-image: url(../assets/TICKET\ 00\ blanco.webp);
+background-image: url(../assets/TICKET\ 00\ blanco_caja.webp);
 background-size: contain;
 background-position: center;
 background-repeat: no-repeat;
@@ -1840,9 +1840,7 @@ pointer-events: all;
 display: flex;
 }
 
-.compra:nth-child(1), .compra:nth-child(2), .compra:nth-child(3) {
-display: block;
-}
+
 
 .contenedorbotoncerrar{
   z-index: 999;
