--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,13 @@
+:root {
+  color-scheme: light;
+}
+
+@media (prefers-color-scheme: dark) {
+  html, body {
+    background-color: #ffffff !important;
+  }
+
+}
 
 *{
   color: white;
@@ -16,6 +26,9 @@ body:active {
   -webkit-tap-highlight-color: transparent;
 }
 
+body {
+  background-color: #5c1a7e;
+}
 
 
 html, body{
