--- a/style/style.css
+++ b/style/style.css
@@ -1,50 +1,3 @@
-#instagram-overlay {
-  position: fixed;
-  inset: 0;
-  background: rgba(0,0,0,0.92);
-  z-index: 99999;
-  display: none;
-  align-items: center;
-  justify-content: center;
-}
-
-.overlay-box {
-  max-width: 320px;
-  padding: 24px;
-  background: #111;
-  border-radius: 16px;
-  text-align: center;
-  font-family: system-ui, sans-serif;
-  color: #fff;
-}
-
-.overlay-box h2 {
-  margin-bottom: 12px;
-  font-size: 22px;
-}
-
-.overlay-box ol {
-  text-align: left;
-  margin: 16px auto;
-  padding-left: 20px;
-}
-
-.overlay-box li {
-  margin-bottom: 8px;
-}
-
-.overlay-box .small {
-  opacity: 0.7;
-  font-size: 14px;
-}
-
-
-
-
-
-
-
-
 
 
 *{
@@ -443,14 +396,13 @@ display: none;
 }
 
 .botondescargarapp{
-  display: none;
-  width: 300px;
-  height: 60px;
+  margin-top: 15px;
+position: relative;
+  width: 250px;
+  height: 50px;
   background-color: green;
-  top: 6%;
   border: none;
     animation: slideDown 1s ease-out, fadeIn 0.3s ease-in-out;
-    box-shadow: 0px 0px 200px 200px rgba(0, 0, 0, 0.547);
     border-radius: 8px;
     border: 3px solid rgb(110, 184, 0);
 }
@@ -458,15 +410,15 @@ display: none;
 .botondescargarapp p{
   color: rgb(255, 255, 255);
   text-shadow: 0px 0px 15px rgb(4, 255, 0);
-font-size: 120%;
+font-size: 90%;
 width: 220px;
 pointer-events: none;
 }
 .botondescargarapp img{
   top: -10px;
   right: -5px;
-width: 80px;
-height: 80px;
+width: 65px;
+height: 65px;
 pointer-events: none;
 
 }
