--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,3 @@
-
 #aviso-instagram {
   position: fixed;
   inset: 0;
@@ -17,6 +16,8 @@
   font-weight: 700;
   padding: 20px;
 }
+
+
 
 
 
@@ -418,13 +419,14 @@ display: none;
 }
 
 .botondescargarapp{
-  margin-top: 15px;
-position: relative;
-  width: 250px;
-  height: 50px;
+  display: none;
+  width: 300px;
+  height: 60px;
   background-color: green;
+  top: 6%;
   border: none;
     animation: slideDown 1s ease-out, fadeIn 0.3s ease-in-out;
+    box-shadow: 0px 0px 200px 200px rgba(0, 0, 0, 0.547);
     border-radius: 8px;
     border: 3px solid rgb(110, 184, 0);
 }
@@ -432,15 +434,15 @@ position: relative;
 .botondescargarapp p{
   color: rgb(255, 255, 255);
   text-shadow: 0px 0px 15px rgb(4, 255, 0);
-font-size: 90%;
+font-size: 120%;
 width: 220px;
 pointer-events: none;
 }
 .botondescargarapp img{
   top: -10px;
   right: -5px;
-width: 65px;
-height: 65px;
+width: 80px;
+height: 80px;
 pointer-events: none;
 
 }
