--- a/style/style.css
+++ b/style/style.css
@@ -438,18 +438,14 @@ pointer-events: none;
 /*--------------------------------BOTON DESBLOQUEAR CARTA-----------------------------------*/
 
 .BOTONDESBLOQUEAR{
-
   overscroll-behavior: none;
-
   font-family:Helvetica;
 position: absolute;
   width: 100%;
   height: 100PX;
   background-color: rgba(255, 0, 0, 0);
-  z-index: 99999999999999;
-  display: none;
-  pointer-events: none;
-    filter: opacity(0);
+  z-index: 99999;
+display: none;
     
 }
 
